IB-480: Fix Wrong font in iOS8

--- a/modules/mobile-ui/sources/styles/style.sass
+++ b/modules/mobile-ui/sources/styles/style.sass
@@ -481,7 +481,7 @@ div#progress
     clear: both
 
 body, html
-  font-family: -apple-system, "Roboto"
+  font-family: -apple-system, "Roboto", 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif
   font-size: 16px
   padding: 0
   margin: 0
